# matter_expert_skill_creator_skill

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs-to-skill/: SKILL.md
docs-to-skill/.claude-plugin/: plugin.json
docs-to-skill/agents/: analyzer-agent.md  citation-qa-agent.md  cluster-agent.md  coherence-qa-agent.md  coverage-qa-agent.md  coverage-transform-agent.md  extractor-agent.md  linker-agent.md  merger-agent.md  translation-qa-agent.md  trigger-desc-agent.md  vision-pdf-agent.md
src/builder/: __init__.py  cost_tracker.py  failures.py  phases.py  pipeline.py  state.py
src/matter_expert/: __init__.py  concept.py  frontmatter.py  index.py  moc.py  paths.py  source_doc.py  validators.py  wikilinks.py
src/runtime/: __init__.py  index.py  memory.py  memory_inspect.py  memory_update.py  vault_brainstorm.py  vault_cite.py  vault_locate.py  vault_search.py  vault_traverse.py
tests/: conftest.py  test_concept.py  test_example_vault.py  test_frontmatter.py  test_index.py  test_moc.py  test_paths.py  test_public_api.py  test_smoke.py  test_source_doc.py  test_validators.py  test_wikilinks.py
tests/builder/: conftest.py  test_cost_tracker.py  test_failures.py  test_integration.py  test_phases.py  test_pipeline.py  test_public_api.py  test_smoke.py  test_state.py
tests/integration/: test_dual_mode.py  test_subagent_definitions.py
tests/runtime/: conftest.py  test_conftest.py  test_index.py  test_memory.py  test_memory_inspect.py  test_memory_update.py  test_public_api.py  test_smoke.py  test_vault_brainstorm.py  (+4 more)
(+134 files in other folders)
